<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.view.fragments.PlanFragment">

    <TextView
        android:id="@+id/monTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="15dp"
        android:text="@string/monday"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tueTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="15dp"
        android:text="@string/tuesday"
        app:layout_constraintTop_toBottomOf="@id/monTv"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/wedTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="15dp"
        android:text="@string/wednesday"
        app:layout_constraintTop_toBottomOf="@id/tueTv"
        app:layout_constraintStart_toStartOf="parent"

        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/thurTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="15dp"
        android:text="@string/thursday"
        app:layout_constraintTop_toBottomOf="@id/wedTv"
        app:layout_constraintStart_toStartOf="parent"

        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/friTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="15dp"
        android:text="@string/friday"
        app:layout_constraintTop_toBottomOf="@id/thurTv"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/satTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="15dp"
        android:text="@string/saturday"
        app:layout_constraintTop_toBottomOf="@id/friTv"
        app:layout_constraintStart_toStartOf="parent"

        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/sunTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="15dp"
        android:text="@string/sunday"
        app:layout_constraintTop_toBottomOf="@id/satTv"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        android:textStyle="bold" />

</androidx.constraintlayout.widget.ConstraintLayout>